# lib-msg

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  lib_msg_deps.bzl
core/: BUILD  client.h  consumer.cc  consumer.h  default-parser.cc  parser.h  producer.cc  producer.h  record.cc  record.h
core/test/: BUILD  core-test.cc  default-parser-test.cc
msg/: BUILD  client.h  consumer.cc  consumer.h  default-parser.cc  parser.h  producer.cc  producer.h  record.cc  record.h
msg/mqtt/: BUILD  mqtt-client.cc  mqtt-client.h
msg/test/: BUILD  default-parser-test.cc  message-handler.cc  mqtt-consumer-test-manual.cc  vcas-consumer-test-manual.cc  vcas-parser-test.cc
msg/vcas/: BUILD  vcas-client.cc  vcas-client.h  vcas-parser.cc  vcas-parser.h
test/: default-parser-test.cc  message-handler.cc  message-handler.h  mqtt-consumer-test-manual.cc  vcas-consumer-test-manual.cc  vcas-parser-test.cc
vcas/: BUILD  vcas-client.cc  vcas-client.h  vcas-parser.cc  vcas-parser.h
vcas/test/: BUILD  vcas-client-test.cc  vcas-parser-test.cc
